!B - Fixes html5 path in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 /rescuecopter-android/bin
 /rescuecopter-android/gen
-/rescuecopter-html5/.gwt
-/rescuecopter-html5/gwt-unitCache
-/rescuecopter-html5/war
+/rescuecopter-html/.gwt
+/rescuecopter-html/gwt-unitCache
+/rescuecopter-html/war
 /rescuecopter/bin
