--- a/rescuecopter-html/.classpath
+++ b/rescuecopter-html/.classpath
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" combineaccessrules="false" path="/rescuecopter"/>
-	<classpathentry kind="output" path="war/WEB-INF/classes"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/rescuecopter"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/rescuecopter/libs/gdx.jar" sourcepath="/rescuecopter/libs/gdx-sources.jar"/>
-	<classpathentry kind="lib" path="/rescuecopter/libs/gdx-sources.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gdx-backend-gwt.jar" sourcepath="war/WEB-INF/lib/gdx-backend-gwt-sources.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gdx-backend-gwt-sources.jar"/>
-	<classpathentry kind="lib" path="/rescuecopter/libs/tween-engine-api.jar" sourcepath="/rescuecopter/libs/tween-engine-api-sources.jar"/>
-	<classpathentry kind="lib" path="/rescuecopter/libs/tween-engine-api-sources.jar"/>
+	<classpathentry kind="lib" path="/gdx-sionengine/libs/gdx-sources.jar"/>
+	<classpathentry kind="lib" path="/gdx-sionengine/libs/gdx.jar"/>
+	<classpathentry kind="lib" path="/gdx-sionengine/libs/tween-engine-api-sources.jar"/>
+	<classpathentry kind="lib" path="/gdx-sionengine/libs/tween-engine-api.jar"/>
+	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
