--- a/rescuecopter-html/.classpath
+++ b/rescuecopter-html/.classpath
@@ -6,9 +6,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gdx-backend-gwt.jar" sourcepath="war/WEB-INF/lib/gdx-backend-gwt-sources.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gdx-backend-gwt-sources.jar"/>
-	<classpathentry kind="lib" path="/gdx-sionengine/libs/gdx-sources.jar"/>
-	<classpathentry kind="lib" path="/gdx-sionengine/libs/gdx.jar"/>
-	<classpathentry kind="lib" path="/gdx-sionengine/libs/tween-engine-api-sources.jar"/>
-	<classpathentry kind="lib" path="/gdx-sionengine/libs/tween-engine-api.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gdx-sources.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gdx.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/tween-engine-api-sources.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/tween-engine-api.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
